# tyuni

./: build.sh  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
config/: local_settings.py  settings.py  urls.py
static/: s1.css  s1.js
static/css/: all.css
text/: admin.py  models.py  tests.py  urls.py  views.py
text/application/: test.py
text/migrations/: 0001_initial.py
text/templates/text/: ans.html  ans2.html  game_page.html  home.html  index.html  s1.html  s1late.html  s2.html  s3.html  s3late.html  s4.html  s4_1.html  s4_2.html  s4_3.html  s4_4.html  s4_5.html  s4_6.html  s4_7.html  s4_8.html  s4_9.html  s5.html  s6.html  s7.html  tenki.html  text.html  text2.html  textcollect.html  textcollect2.html
没/: requirements2.txt  requirements3.txt  requirements4.txt  requirements5.txt
